# Numerical-PDE

./: plots.cc
1d/: FTBS  FTBS.cc
1d_Laplacian/: main.cc
2d/: CMakeLists.txt  Diffusion.cc
2d/.codelite/: Codes.session
2d/plot/: Plot.ipynb
2d_Laplacian/: functions.h  plot.ipynb
Assignment-2/problem1/: main
Assignment-2/problem3/: Makefile  main  main.cc
Assignment-2/problem4/: backup.cc  main  main.cc
Codes/: CMakeLists.txt
Codes/.codelite/: Codes.tags  compilation.db  refactoring.db
Codes/.kdev4/: Codes.kdev4
Codes/Application/: CMakeLists.txt
Diffusion/: CMakeLists.txt
Diffusion/code/: CMakeLists.txt
Diffusion/include/: Eigen.h  Field.h  Grid.h  Matrix.h  Vector.h
Diffusion/source/: Eigen.cc  Field.cc  Grid.cc  Matrix.cc  Vector.cc  main.cc
Helmholtz/: Helhmholtz.cpp  a.out
Helmholtz_Matrix_Diagonalization/: Helhmholtz.cpp
Helmholtz_Matrix_Diagonalization/include/: helmholtz.h
Helmholtz_Matrix_Diagonalization/plot/: plot.ipynb
Helmholtz_Matrix_Diagonalization/source/: helmholtz.cc
Jacobi_Poisson/source/: main.cc
Poisson/plot/: plot.ipynb
Poisson/source/: helmholtz.cc  main.cc
Poisson_Matrix_Diagonalization/: CMakeLists.txt  Helhmholtz.cpp
Poisson_Matrix_Diagonalization/include/: helmholtz.h
Poisson_Matrix_Diagonalization/source/: main.cc
Thomas_algorithm/include/: functions.h
Thomas_algorithm/plot/: plot.ipynb  praveen.lay
Thomas_algorithm/source/: functions.cc  main.cc
assign-2/problem-1/: Makefile  main  main.cc
assign-2/problem-3/: Helhmholtz.cpp  a.out
backup/: main  main.cc  plot.ipynb
(+88 files in other folders)
